--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 	<div class="practicearea">
 		<div class="practice">
 			<h2>August 26 practice</h2>
+			<p>My first      paragraph. Whitespace does not matter.</p>
+			<!-- These comments will not show in web document-->
+			 <h1>First heading, h1</h1>
+			 <h2>Second heading, h2</h2>
+			 <h3>Third heading, h3</h3>
+			 <h4>Fourth heading, h4</h4>
+			 <h5>Fifth heading, h5</h5>
+			 <h6>Sixth heading, h6</h6>
          
 		</div>
 
